--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment-timezone": "^0.5.33",
-    "mongoose": "^5.12.5",
-    "socket.io": "^4.0.1"
+    "mongoose": "^5.12.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
